# email-context

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 70e083c23ab7_initial_schema.py
app/: main.py
app/api/: responses.py  router.py
app/api/v1/: auth.py  reports.py  summaries.py
app/core/: cache.py  config.py  crypto.py  deps.py  logging.py  security.py  telemetry.py
app/db/: base.py  session.py
app/models/: __init__.py  accountant.py  client.py  email.py  email_summary.py  enums.py  firm.py
app/repositories/: accountant.py  client.py  email.py  email_summary.py  firm.py  report.py
app/schemas/: auth.py  errors.py  report.py  summary.py
app/services/: exceptions.py  report_service.py  summary_service.py
app/services/llm/: base.py  factory.py  gemini_provider.py  openai_provider.py  stub.py
app/web/: app.js  index.html  styles.css
deploy/: email-context.service
docs/: DESIGN.md
evals/: __init__.py  cases.py  judge.py  test_grounding.py  test_judge.py
scripts/: seed.py
tests/: conftest.py  factories.py  test_auth_api.py  test_context_scaling.py  test_crypto.py  test_llm_provider.py  test_reports_api.py  test_security.py  test_summary_api.py
