[project]
name = "email-context"
version = "0.1.0"
description = "Email Context & Summarization System — unified per-client email intelligence for CPA firms"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "redis>=5.2",
    "pyjwt>=2.10",
    "bcrypt>=4.2",
    "cryptography>=44.0",
    "openai>=1.54",
    "structlog>=24.4",
    "tenacity>=9.0",
    "python-multipart>=0.0.12",
]

# PEP 735 dependency group — installed by `uv sync` by default, excluded with --no-dev.
[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "aiosqlite>=0.20",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom evaluates Depends()/Security() in argument
# defaults on purpose; these are not the mutable-default footgun B008 warns about.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Security", "fastapi.Query", "fastapi.Path"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
